--- a/department-ng/src/styles.css
+++ b/department-ng/src/styles.css
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+.bg-3{
+    background-color: #B2A59B;
+    color: #B2A59B;
+}
