--- a/department-ng/src/app/login/loginpage/loginpage.component.html
+++ b/department-ng/src/app/login/loginpage/loginpage.component.html
@@ -9,18 +9,21 @@
                     </div>
                 </div>
                 <div class="card-body">
+                    <div>
+                        <h6 class="text-danger text-center">{{responsemessage}}</h6>
+                    </div>
                     <div class="">
                         <label for="userid">User Id:</label><br />
-                        <input ngModel #userid="ngModel" type="text" required class="form-control" name="userid" placeholder="User id" />
+                        <input ngModel value="1" #userid="ngModel" type="text" required class="form-control" name="userid" placeholder="User id" />
                         <div *ngIf="userid.touched && userid.invalid" class="text-danger">Invalid Userid</div>
                     </div>
                     <div class="mt-3">
                         <label for="password">Password :</label><br />
-                        <input ngModel #pass="ngModel" minlength="7" type="text" class="form-control" required="" name="password" placeholder="Password" />
+                        <input ngModel value="12345678" #pass="ngModel" minlength="7" type="text" class="form-control" required="" name="password" placeholder="Password" />
                         <div *ngIf="pass.touched && pass.invalid" class="text-danger">Please Enter Valid Password</div>
                     </div>
                 </div>
-                <a href="/forgot-password" class="text-center m-2 text-decoration-none">Forgot Password</a>
+                <a routerLink="forgot-password" class="text-center m-2 text-decoration-none">Forgot Password</a>
                 <div class="card-footer m-0 row bg-1  border-top border-2 border-dark">
                     <button type="submit" class="btn text-light"><p class="h4 m-0 p-0">Login</p></button>
                 </div>
