--- a/department-ng/src/styles.css
+++ b/department-ng/src/styles.css
@@ -1,5 +1,94 @@
 /* You can add global styles to this file, and also import other style files */
-.bg-3{
+.bg-dm-1{
     background-color: #B2A59B;
-    color: #B2A59B;
 }
+.bg-dm-2{
+    background-color: #dcd4b4 !important;
+}
+.bg-dm-3{
+    background-color: #fcecd4 !important;
+}
+.bg-dm-4{
+    background-color: #647474 !important;
+}
+.bg-dm-5{
+    background-color: #74b4a4 !important;
+}
+.bg-dm-6{
+    background-color: #5c6c7c !important;
+}
+.bg-dm-7{
+    background-color: #c890c4 !important;
+}
+
+.active{
+    border-top: 0 !important;
+    border-left: 0 !important;
+    border-right: 0 !important;
+    border-radius: 0% !important;
+    border-bottom: 2px solid whitesmoke !important;
+}
+.navheader{
+    top: 0% !important;
+    position: sticky !important;
+}
+.custom-select {
+    position: relative;
+    font-family: Arial;
+  }
+  
+  .custom-select select {
+    display: none; /*hide original SELECT element: */
+  }
+  
+  .select-selected {
+    background-color: DodgerBlue;
+  }
+  
+  /* Style the arrow inside the select element: */
+  .select-selected:after {
+    position: absolute;
+    content: "";
+    top: 14px;
+    right: 10px;
+    width: 0;
+    height: 0;
+    border: 6px solid transparent;
+    border-color: #fff transparent transparent transparent;
+  }
+  
+  /* Point the arrow upwards when the select box is open (active): */
+  .select-selected.select-arrow-active:after {
+    border-color: transparent transparent #fff transparent;
+    top: 7px;
+  }
+  
+  /* style the items (options), including the selected item: */
+  .select-items div,.select-selected {
+    color: #ffffff;
+    padding: 8px 16px;
+    border: 1px solid transparent;
+    border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
+    cursor: pointer;
+  }
+  
+  /* Style items (options): */
+  .select-items {
+    position: absolute;
+    background-color: DodgerBlue;
+    top: 100%;
+    left: 0;
+    right: 0;
+    z-index: 99;
+  }
+  
+  /* Hide the items when the select box is closed: */
+  .select-hide {
+    display: none;
+  }
+  
+  .select-items div:hover, .same-as-selected {
+    background-color: rgba(0, 0, 0, 0.1);
+  }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
