--- a/department-ng/src/app/faculty/attandance/attandance.component.html
+++ b/department-ng/src/app/faculty/attandance/attandance.component.html
@@ -54,7 +54,11 @@
             </div>
         </div>
     </div>
-    <div [className]="{'row m-5 mt-1':!message}">{{message}}</div>
+    <div *ngIf="message!=''">
+        <div class="row m-5 mt-2 text-dark justify-content-center bg-dm-3">
+            <div class="col-4 justify-content-center text-center">{{message}}</div>
+        </div>
+    </div>
     <div class="row m-5 mt-1" *ngIf="displaytable">
         <table mat-table [dataSource]="student" class="mat-elevation-z8 demo-table">
             <ng-container matColumnDef="id">
@@ -81,5 +85,71 @@
     </div>
 </div>
 <ng-template #btn2>
-    <h1>hello from display attandance</h1>
+    <div class="row bg-dm-6 text-light m-5 mt-2 justify-content-center" style="height: 200px">
+        <div class="row justify-content-center">
+            <div *ngIf="data && data.length > 0 && data[0].subjects"
+                class="col-3 justify-content-center text-center pt-5">
+                <mat-label>Select Subject : </mat-label>
+                <mat-select class="w-50 bg-light" [(ngModel)]="selectedsubject">
+                    <mat-option *ngFor="let s of data[0].subjects" [value]="s">
+                        {{s}}
+                    </mat-option>
+                </mat-select>
+            </div>
+            <div *ngIf="data && data.length > 0 && data[0].batches"
+                class="col-3 justify-content-center text-center pt-5">
+                <mat-label>Select Batch : </mat-label>
+                <mat-select class="w-50 bg-light" [(ngModel)]="selectbatch">
+                    <mat-option *ngFor="let s of data[0].batches" [value]="s">
+                        {{s}}
+                    </mat-option>
+                </mat-select>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-2 text-center">
+                <button class="btn bg-dm-3 text-dark" [disabled]="!areSelectionsMade2()" (click)="showattandance()">Show Attandance</button>
+            </div>
+        </div>
+    </div>
+    <div *ngIf="message!=''">
+        <div class="row m-5 mt-2 text-dark justify-content-center bg-dm-3">
+            <div class="col-3 justify-content-center text-center m-3">
+                <mat-label>Select Topic : </mat-label>
+                <mat-select class="w-50 bg-light" [(ngModel)]="selectedlecture" (selectionChange)="changedlecture()">
+                    <mat-option *ngFor="let s of lectures" [value]="s">
+                        {{s}}
+                    </mat-option>
+                </mat-select>
+            </div>
+        </div>
+        <div class="row m-5 mt-1" *ngIf="displaytable">
+            <table mat-table [dataSource]="attandancedata" class="mat-elevation-z8 demo-table">
+                <ng-container matColumnDef="student_id">
+                    <th mat-header-cell *matHeaderCellDef>ID</th>
+                    <td mat-cell *matCellDef="let element">{{element.student_id}}</td>
+                </ng-container>
+                <ng-container matColumnDef="name">
+                    <th mat-header-cell *matHeaderCellDef>Name</th>
+                    <td mat-cell *matCellDef="let element">{{element.name}}</td>
+                </ng-container>
+                <ng-container matColumnDef="fathernumber">
+                    <th mat-header-cell *matHeaderCellDef>Father Contact No,</th>
+                    <td mat-cell *matCellDef="let element">{{element.fathernumber}}</td>
+                </ng-container>
+                <ng-container matColumnDef="lecture_date">
+                    <th mat-header-cell *matHeaderCellDef>lecture date&time</th>
+                    <td mat-cell *matCellDef="let element">{{element.lecture_date}}</td>
+                </ng-container>
+                <tr mat-header-row *matHeaderRowDef="displaycolumns2"></tr>
+                <tr mat-row *matRowDef="let row; columns: displaycolumns2;"></tr>
+            </table>
+            <div class="row m-3 justify-content-center mt-5 mb-5">
+                <div class="col-2">
+                    <p>This is All about</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </ng-template>
