--- a/department-ng/src/app/faculty/practicals/practicals.component.html
+++ b/department-ng/src/app/faculty/practicals/practicals.component.html
@@ -1,1 +1,60 @@
-<p>practicals works!</p>
+<div class="row bg-dm-4 m-4 text-light justify-content-center">
+    <div class="col-2 link">
+        <button class="btn" (click)="changepage('btn2')" [ngClass]="{ active: state }">
+            Add Practical
+        </button>
+    </div>
+    <div class="col-1 justify-content-center pt-1 link">|</div>
+    <div class="col-2 text-light link">
+        <button class="btn" (click)="changepage('btn1')" [ngClass]="{ active: !state }">
+            Check Practical
+        </button>
+    </div>
+</div>
+<div *ngIf="state">
+    <div class="row bg-dm-6 text-light m-5 mt-2 justify-content-center" style="height: 200px">
+        <div class="row h-25 justify-content-center">
+            <div class="col-4 justify-content-center text-center p-3">
+                <mat-form-field class="w-50 h-100">
+                    <mat-label class="w-25">Topic</mat-label>
+                    <input matInput class="w-100" [(ngModel)]="topic">
+                  </mat-form-field>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-3 justify-content-center text-center pt-5">
+                <mat-label>Select Subject : </mat-label>
+                <mat-select class="w-50 bg-light" [(ngModel)]="selectedsubject">
+                    <mat-option *ngFor="let s of subjects" [value]="s">
+                        {{s}}
+                    </mat-option>
+                </mat-select>
+            </div>
+            <div class="col-3 justify-content-center text-center pt-5">
+                <mat-label>Select Batch : </mat-label>
+                <mat-select class="w-50 bg-light" [(ngModel)]="selectedbatch">
+                    <mat-option *ngFor="let s of batches" [value]="s">
+                        {{s}}
+                    </mat-option>
+                </mat-select>
+            </div>
+            <div class="col-3 justify-content-center text-center pt-5">
+                <mat-label>Select Division : </mat-label>
+                <mat-select class="w-50 bg-light" [(ngModel)]="selecteddivision">
+                    <mat-option value="A">A</mat-option>
+                    <mat-option value="B">B</mat-option>
+                </mat-select>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-2 text-center">
+                <button class="btn bg-dm-3 text-dark" [disabled]="!areSelectionsMade()" >Take Attandance</button>
+            </div>
+        </div>
+    </div>
+    <div *ngIf="message!=''">
+        <div class="row m-5 mt-2 text-dark justify-content-center bg-dm-3">
+            <div class="col-4 justify-content-center text-center">{{message}}</div>
+        </div>
+    </div>
+    </div>
