--- a/department-ng/src/app/faculty/practicals/practicals.component.html
+++ b/department-ng/src/app/faculty/practicals/practicals.component.html
@@ -48,7 +48,7 @@
         </div>
         <div class="row justify-content-center">
             <div class="col-2 text-center">
-                <button class="btn bg-dm-3 text-dark" [disabled]="!areSelectionsMade()" >Take Attandance</button>
+                <button class="btn bg-dm-3 text-dark" (click)="addpractical()" [disabled]="!areSelectionsMade()" >Add Practical</button>
             </div>
         </div>
     </div>
