--- a/department-ng/src/app/student/attandance/attandance.component.html
+++ b/department-ng/src/app/student/attandance/attandance.component.html
@@ -1,1 +1,52 @@
-<p>attandance works!</p>
+<div class="row m-5 mb-0 mt-2 text-dark justify-content-center bg-dm-3">
+    <div class="col-3 justify-content-center text-center m-3">
+        <mat-label>Select Subject : </mat-label>
+        <mat-select class="w-50 bg-light" [(ngModel)]="selectedsubject" (selectionChange)="changedsubject()">
+            <mat-option *ngFor="let s of subjects" [value]="s">
+                {{s}}
+            </mat-option>
+        </mat-select>
+    </div>
+</div>
+<div class="row m-5 mt-0 text-dark justify-content-center bg-dm-3">
+    <div class="col-3 justify-content-center text-center m-3">
+        Total Lectures :{{totallecture}}
+    </div>
+    <div class="col-3 justify-content-center text-center m-3">
+        Attended Lectures :{{attendedlecture}}
+    </div>
+    <div class="col-3 justify-content-center text-center m-3">
+        Percentage :{{ attendedlecture/totallecture | percent}}
+    </div>
+</div>
+<div class="row m-5 mt-1">
+    <table mat-table [dataSource]="Lecture" class="mat-elevation-z8 demo-table">
+        <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef>ID</th>
+            <td mat-cell *matCellDef="let element">{{element.id}}</td>
+        </ng-container>
+        <ng-container matColumnDef="topic">
+            <th mat-header-cell *matHeaderCellDef>topic</th>
+            <td mat-cell *matCellDef="let element">{{element.topic}}</td>
+        </ng-container>
+        <ng-container matColumnDef="faculty_name">
+            <th mat-header-cell *matHeaderCellDef>faculty name</th>
+            <td mat-cell *matCellDef="let element">{{element.faculty_name}}</td>
+        </ng-container>
+        <ng-container matColumnDef="subject_name">
+            <th mat-header-cell *matHeaderCellDef>subject name</th>
+            <td mat-cell *matCellDef="let element">{{element.subject_name}}</td>
+        </ng-container>
+        <ng-container matColumnDef="date">
+            <th mat-header-cell *matHeaderCellDef>Date</th>
+            <td mat-cell *matCellDef="let element">{{element.date | date:'dd-MM-yyyy'}}</td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedcolumn"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedcolumn;" [ngClass]="getrow(row)"></tr>
+    </table>
+    <div class="row m-3 justify-content-center mt-5 mb-5">
+        <div class="col-2">
+            <p>This is All about</p>
+        </div>
+    </div>
+</div>
