--- a/department-ng/src/app/student/attandance/attandance.component.html
+++ b/department-ng/src/app/student/attandance/attandance.component.html
@@ -15,7 +15,7 @@
     <div class="col-3 justify-content-center text-center m-3">
         Attended Lectures :{{attendedlecture}}
     </div>
-    <div class="col-3 justify-content-center text-center m-3">
+    <div class="col-3 justify-content-center text-center m-3" [ngClass]="{'text-danger':attendedlecture/totallecture*100<50}">
         Percentage :{{ attendedlecture/totallecture | percent}}
     </div>
 </div>
