--- a/department-ng/src/app/student/practical/practical.component.html
+++ b/department-ng/src/app/student/practical/practical.component.html
@@ -1,1 +1,56 @@
-<p>practical works!</p>
+<div *ngIf="message" class="row m-5 mb-0 mt-2 text-dark justify-content-center bg-dm-3">
+    <div class="col-3 justify-content-center text-center m-3">
+        {{message}}
+    </div>
+</div>
+<div *ngIf="uploadstate" class="row m-5 mb-0 mt-2 text-dark justify-content-center bg-dm-3">
+    <div class="col-3 justify-content-center text-center m-3">
+        <input type="file" (change)="FileInput($event)" accept="image/png, image/jpeg, image/jpg" [(ngModel)]="filetoupload" class="form-control" id="inputGroupFile03" aria-describedby="inputGroupFileAddon03" aria-label="Upload">
+    </div>
+    <div class="col-3 justify-content-center text-left m-3">
+        <button class="btn btn-success" (click)="uploadimage($event)" [disabled]="!isFileValid()">Submit Practical</button>
+    </div>
+</div>
+<div class="row m-5 mt-1">
+    <table mat-table [dataSource]="practicallist" class="mat-elevation-z8 demo-table">
+        <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef>ID</th>
+            <td mat-cell *matCellDef="let element">{{element.id}}</td>
+        </ng-container>
+        <ng-container matColumnDef="description">
+            <th mat-header-cell *matHeaderCellDef>topic</th>
+            <td mat-cell *matCellDef="let element">{{element.description}}</td>
+        </ng-container>
+        <ng-container matColumnDef="faculty">
+            <th mat-header-cell *matHeaderCellDef>faculty name</th>
+            <td mat-cell *matCellDef="let element">{{element.faculty}}</td>
+        </ng-container>
+        <ng-container matColumnDef="subject">
+            <th mat-header-cell *matHeaderCellDef>subject name</th>
+            <td mat-cell *matCellDef="let element">{{element.subject}}</td>
+        </ng-container>
+        <ng-container matColumnDef="date">
+            <th mat-header-cell *matHeaderCellDef>Date</th>
+            <td mat-cell *matCellDef="let element">{{element.date | date:'dd-MM-yyyy'}}</td>
+        </ng-container>
+        <ng-container matColumnDef="action">
+            <th mat-header-cell *matHeaderCellDef>Action</th>
+            <td mat-cell *matCellDef="let element">
+                <!-- Check if the practical is submitted -->
+                <ng-container *ngIf="isPracticalSubmitted(element)">
+                    <button mat-button class="btn btn-success bg-success">View Image</button>
+                </ng-container>
+                <ng-container *ngIf="!isPracticalSubmitted(element)">
+                    <button mat-button (click)="upload(element.id)" class="btn btn-danger bg-danger">Upload Image</button>
+                </ng-container>
+            </td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displaycolumn"></tr>
+        <tr mat-row *matRowDef="let row; columns: displaycolumn;" [ngClass]="{'bg-success':isPracticalSubmitted(row),'bg-warning':!isPracticalSubmitted(row)}"></tr>
+    </table>
+    <div class="row m-3 justify-content-center mt-5 mb-5">
+        <div class="col-2">
+            <p>This is All about</p>
+        </div>
+    </div>
+</div>
