practical module completed by both side

--- a/department-ng/src/app/faculty/practicals/practicals.component.css
+++ b/department-ng/src/app/faculty/practicals/practicals.component.css
@@ -18,4 +18,9 @@
   .demo-row-is-clicked {
     font-weight: bold;
   }
-  
+  .bg-success1{
+    background-color: rgba(144, 209, 133, 0.668) !important;
+}
+.bg-warning{
+    background-color: rgba(206, 161, 161, 0.522) !important;
+}
