--- a/department-ng/src/app/faculty/practicals/practicals.component.html
+++ b/department-ng/src/app/faculty/practicals/practicals.component.html
@@ -58,3 +58,111 @@
         </div>
     </div>
     </div>
+<div *ngIf="!state">
+    <div class="row bg-dm-6 text-light m-5 mt-2 justify-content-center" style="height: 200px">
+        <div class="row justify-content-center">
+            <div class="col-3 justify-content-center text-center pt-5">
+                <mat-label>Select Subject : </mat-label>
+                <mat-select class="w-50 bg-light" [(ngModel)]="selectedsubject_">
+                    <mat-option *ngFor="let s of subjects" [value]="s">
+                        {{s}}
+                    </mat-option>
+                </mat-select>
+            </div>
+            <div class="col-3 justify-content-center text-center pt-5">
+                <mat-label>Select Batch : </mat-label>
+                <mat-select class="w-50 bg-light" [(ngModel)]="selectedbatch_">
+                    <mat-option *ngFor="let s of batches" [value]="s">
+                        {{s}}
+                    </mat-option>
+                </mat-select>
+            </div>
+            <div class="col-3 justify-content-center text-center pt-5">
+                <mat-label>Select Division : </mat-label>
+                <mat-select class="w-50 bg-light" [(ngModel)]="selecteddivision_">
+                    <mat-option value="A">A</mat-option>
+                    <mat-option value="B">B</mat-option>
+                </mat-select>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-2 text-center">
+                <button class="btn bg-dm-3 text-dark" (click)="getpracticalstocheck()" [disabled]="!areSelectionsMade2()" >Get Practicals</button>
+            </div>
+        </div>
+    </div>
+    <div *ngIf="message" class="row m-5 mb-0 mt-2 text-dark justify-content-center bg-dm-3">
+        <div class="col-3 justify-content-center text-center m-3">
+            {{message}}
+        </div>
+    </div>
+    
+    <div *ngIf="viewimage" class="row m-5 mb-0 mt-2 text-dark justify-content-center bg-dm-3">
+        <div class="col-2 justify-content-center text-center m-1">
+            <img [src]="imageurl" alt="practical image unable to display" class="h-100 m-0 w-100">
+        </div>
+        <div class="col-2 justify-content-center text-left m-1">
+            <p>Submited On :{{practicalrecord_selected?.submit_date}}</p>
+        </div>
+        <div class="col-2 justify-content-center text-center pt-5">
+            <mat-label>Status : </mat-label>
+            <mat-select class="w-50 bg-light" [(ngModel)]="selectedstatus">
+                <mat-option value="APPROVED">Approve</mat-option>
+                <mat-option value="REJECTED">Reject</mat-option>
+            </mat-select>
+        </div>
+        <div class="col-3 justify-content-center text-center pt-5">
+            <mat-label>Reply :</mat-label>
+            <textarea [(ngModel)]="replymessage" matInput></textarea>
+        </div>
+        <div class="col-2 justify-content-center text-center pt-5">
+            <button mat-button class="btn btn-success bg-success" [disabled]="!selectedstatus" (click)="submitreply()">Submit</button>
+        </div>
+    </div>
+    <div class="row m-5 mt-1" *ngIf="showtable">
+        <table mat-table [dataSource]="practicalrecord" class="mat-elevation-z8 demo-table">
+            <ng-container matColumnDef="practical_id">
+                <th mat-header-cell *matHeaderCellDef>Practical ID</th>
+                <td mat-cell *matCellDef="let element">{{element.practical_id}}</td>
+            </ng-container>
+            <ng-container matColumnDef="topic">
+                <th mat-header-cell *matHeaderCellDef>topic</th>
+                <td mat-cell *matCellDef="let element">{{element.topic}}</td>
+            </ng-container>
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef>Student name</th>
+                <td mat-cell *matCellDef="let element">{{element.student_name}}</td>
+            </ng-container>
+            <ng-container matColumnDef="student_id">
+                <th mat-header-cell *matHeaderCellDef>Student Id</th>
+                <td mat-cell *matCellDef="let element">{{element.student_id}}</td>
+            </ng-container>
+            <ng-container matColumnDef="status">
+                <th mat-header-cell *matHeaderCellDef>status</th>
+                <td mat-cell *matCellDef="let element">{{element.status}}</td>
+            </ng-container>
+            <ng-container matColumnDef="submit_date">
+                <th mat-header-cell *matHeaderCellDef>Date of submission</th>
+                <td mat-cell *matCellDef="let element">{{element.submit_date | date:'dd-MM-yyyy'}}</td>
+            </ng-container>
+            <ng-container matColumnDef="reply">
+                <th mat-header-cell *matHeaderCellDef>Reply</th>
+                <td mat-cell *matCellDef="let element">{{element.date | date:'dd-MM-yyyy'}}</td>
+            </ng-container>
+            <ng-container matColumnDef="action">
+                <th mat-header-cell *matHeaderCellDef>Action</th>
+                <td mat-cell *matCellDef="let element">
+                        <button mat-button (click)="viewimagefor(element)" class="btn btn-success bg-success">View Image</button>
+                </td>
+            </ng-container>
+            <tr mat-header-row *matHeaderRowDef="displaycolumn"></tr>
+            <tr mat-row *matRowDef="let row; columns: displaycolumn;" [ngClass]="{'bg-success1':ispracticalsubmitted(row),'bg-warning':!ispracticalsubmitted(row)}"></tr>
+        </table>
+        <div class="row m-3 justify-content-center mt-5 mb-5">
+            <div class="col-2">
+                <p>This is All about</p>
+            </div>
+        </div>
+    </div>
+    
+</div>
