account(profile) page completed for both user

--- a/department-ng/src/app/faculty/navbar/navbar.component.css
+++ b/department-ng/src/app/faculty/navbar/navbar.component.css
@@ -7,3 +7,8 @@ button{
 .active{
     border-bottom: 2px solid black !important;
 }
+.navbard{
+    z-index: 7 !important;
+    top: 0 !important;
+    position: sticky !important;
+}
