--- a/department-ng/src/app/student/attandance/attandance.component.html
+++ b/department-ng/src/app/student/attandance/attandance.component.html
@@ -5,6 +5,7 @@
             <mat-option *ngFor="let s of subjects" [value]="s">
                 {{s}}
             </mat-option>
+            <mat-option value="ALL">ALL</mat-option>
         </mat-select>
     </div>
 </div>
