--- a/department-ng/src/app/student/account/account.component.html
+++ b/department-ng/src/app/student/account/account.component.html
@@ -13,7 +13,7 @@
                 style="border-top-left-radius: .5rem; border-bottom-left-radius: .5rem;">
                 <img src="../../../assets/user.jpg" alt="Avatar" class="img-fluid border my-5 border-radius-50" style="width: 80px;" />
                 <h5>{{data?.name}}</h5>
-                <p>{{data?.post}}</p>
+                <p>{{data?.id}}</p>
                 <i class="far fa-edit mb-5"></i>
               </div>
               <div class="col-md-8">
@@ -32,20 +32,28 @@
                   </div>
                   <div class="row pt-1">
                     <div class="col-6 mb-3">
-                      <h6>ID</h6>
-                      <p class="text-muted">{{data?.id}}</p>
+                      <h6>Course</h6>
+                      <p class="text-muted">{{data?.course}}</p>
                     </div>
-                    <div class="col-6 mb-3">
-                      <h6>Department</h6>
-                      <p class="text-muted">{{data?.department}}</p>
+                    <div class="col-3 mb-3">
+                      <h6>Batch</h6>
+                      <p class="text-muted">{{data?.sem_id}}</p>
+                    </div>
+                    <div class="col-3 mb-3">
+                      <h6>Division</h6>
+                      <p class="text-muted">{{data?.division}}</p>
                     </div>
                   </div>
-                  <h6>Other Details</h6>
+                  <h6>Parent Details</h6>
                   <hr class="mt-0 mb-4">
                   <div class="row pt-1">
                     <div class="col-6 mb-3">
-                      <h6>Education</h6>
-                      <p class="text-muted">{{data?.education}}</p>
+                      <h6>Father's Contact no. :-</h6>
+                      <p class="text-muted">{{data?.father_number}}</p>
+                    </div>
+                    <div class="col-6 mb-3">
+                      <h6>Mother's Contact no. :-</h6>
+                      <p class="text-muted">{{data?.mother_number}}</p>
                     </div>
                   </div>
                   <div class="d-flex justify-content-start">
